# matrixx

./: README.md  setup.cfg
matr/: common.py  matrix.py  vector.py  vector_space.py
matrixx/: __init__.py  common.py  immutable.py  line.py  matrix.py  plane.py  vector.py  vector_space.py
