[metadata]
name = matrixx
version = 0.0.1
author = Grisha Vartanyan, Isak Nyberg
author_email = grisha@vartanyan.com, isak@nyberg.dev
license = GPL 3
description = A basic matrix/vector implementation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GrishaVar/matrixx
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering :: Mathematics

[options]
package_dir =
    = .
packages = matrixx
python_requires = >=3.8
